[package]
name = "aptos-keygen"
version = "0.1.0"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "Command line utility to generate Ed25519 key pairs for testing"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
rand = "0.7.3"

aptos-crypto = { path = "../aptos-crypto" }
aptos-types = { path = "../../types" }

serde = { version = "1.0.137", features = ["derive"], default-features = false }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
clap = { version = "3.1.6", features = ["derive"] }